local dev setup

--- a/.env
+++ b/.env
@@ -9,7 +9,7 @@
 ###################################
 
 # Set this to the path where Freeposte data and configuration is stored
-ROOT=/freeposte
+ROOT=./data
 
 # Freeposte version to run (stable, 1.0, 1.1, etc. or latest)
 VERSION=stable
@@ -21,10 +21,10 @@ SECRET_KEY=ChangeMeChangeMe
 BIND_ADDRESS=127.0.0.1
 
 # Main mail domain
-DOMAIN=freeposte.io
+DOMAIN=example.net
 
 # Exposed mail-server hostname
-HOSTNAME=mail.freeposte.io
+HOSTNAME=mail.example.net
 
 # Postmaster local part (will append the main mail domain)
 POSTMASTER=admin
@@ -37,13 +37,13 @@ COMPOSE_PROJECT_NAME=freeposte
 ###################################
 
 # Choose which frontend Web server to run if any (value: nginx, none)
-FRONTEND=none
+FRONTEND=nginx
 
 # Choose which webmail to run if any (values: roundcube, rainloop, none)
-WEBMAIL=none
+WEBMAIL=rainloop
 
 # Expose the admin interface in publicly (values: yes, no)
-EXPOSE_ADMIN=no
+EXPOSE_ADMIN=yes
 
 ###################################
 # Mail settings
@@ -51,7 +51,7 @@ EXPOSE_ADMIN=no
 
 # Message size limit in bytes
 # Default: accept messages up to 50MB
-MESSAGE_SIZE_LIMIT = 50000000
+MESSAGE_SIZE_LIMIT=50000000
 
 # Networks granted relay permissions, make sure that you include your Docker
 # internal network (default to 172.17.0.0/16)
@@ -68,4 +68,4 @@ FETCHMAIL_DELAY=600
 ###################################
 
 # Set this to enable debugging globally
-DEBUG=False
+DEBUG=True
