--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,26 +3,26 @@ version: '2'
 services:
 
   http:
-    # build: $FRONTEND
-    image: freeposte/$FRONTEND:$VERSION
-    restart: always
+    build: $FRONTEND
+    # image: freeposte/$FRONTEND:$VERSION
+    #restart: always
     env_file: .env
     ports:
-      - "$BIND_ADDRESS:80:80"
+      - "$BIND_ADDRESS:8080:80"
       - "$BIND_ADDRESS:443:443"
     volumes:
       - "$ROOT/certs:/certs"
 
   redis:
     image: redis:latest
-    restart: always
+    #restart: always
     volumes:
       - "$ROOT/redis:/data"
 
   imap:
-    # build: dovecot
-    image: freeposte/dovecot:$VERSION
-    restart: always
+    build: dovecot
+    # image: freeposte/dovecot:$VERSION
+    #restart: always
     env_file: .env
     ports:
       - "$BIND_ADDRESS:143:143"
@@ -34,12 +34,12 @@ services:
       - "$ROOT/overrides:/overrides"
 
   smtp:
-    # build: postfix
-    image: freeposte/postfix:$VERSION
-    restart: always
+    build: postfix
+    # image: freeposte/postfix:$VERSION
+    #restart: always
     env_file: .env
     ports:
-      - "$BIND_ADDRESS:25:25"
+      - "$BIND_ADDRESS:2525:25"
       - "$BIND_ADDRESS:465:465"
       - "$BIND_ADDRESS:587:587"
     volumes:
@@ -48,9 +48,9 @@ services:
       - "$ROOT/overrides:/overrides"
 
   milter:
-    # build: rmilter
-    image: freeposte/rmilter:$VERSION
-    restart: always
+    build: rmilter
+    # image: freeposte/rmilter:$VERSION
+    #restart: always
     env_file: .env
     volumes:
       - "$ROOT/filter:/data"
@@ -58,25 +58,25 @@ services:
       - "$ROOT/overrides:/overrides"
 
   antispam:
-    # build: rspamd
-    image: freeposte/rspamd:$VERSION
-    restart: always
+    build: rspamd
+    # image: freeposte/rspamd:$VERSION
+    #restart: always
     env_file: .env
     volumes:
       - "$ROOT/filter:/var/lib/rspamd"
 
   antivirus:
-    # build: clamav
-    image: freeposte/clamav:$VERSION
-    restart: always
+    build: clamav
+    # image: freeposte/clamav:$VERSION
+    #restart: always
     env_file: .env
     volumes:
       - "$ROOT/filter:/data"
 
   admin:
-    # build: admin
-    image: freeposte/admin:$VERSION
-    restart: always
+    build: admin
+    # image: freeposte/admin:$VERSION
+    #restart: always
     env_file: .env
     ports:
       - "127.0.0.1:8000:80"
@@ -86,17 +86,17 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock:ro
 
   webmail:
-    # build: "$WEBMAIL"
-    image: "freeposte/$WEBMAIL:$VERSION"
-    restart: always
+    build: "$WEBMAIL"
+    # image: "freeposte/$WEBMAIL:$VERSION"
+    #restart: always
     env_file: .env
     volumes:
       - "$ROOT/webmail:/data"
 
   fetchmail:
-    # build: fetchmail
-    image: freeposte/fetchmail:$VERSION
-    restart: always
+    build: fetchmail
+    # image: freeposte/fetchmail:$VERSION
+    #restart: always
     env_file: .env
     volumes:
       - "$ROOT/freeposte:/data"
