--- a/dovecot/conf/dovecot.conf
+++ b/dovecot/conf/dovecot.conf
@@ -7,6 +7,7 @@ postmaster_address = {{ POSTMASTER }}@{{ DOMAIN }}
 hostname = {{ HOSTNAME }}
 mail_plugins = $mail_plugins quota
 submission_host = smtp
+mail_debug = yes
 
 service dict {
   unix_listener dict {
