--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,9 +37,9 @@ http {
 
       add_header Strict-Transport-Security max-age=15768000;
 
-      if ($scheme = http) {
-    		return 301 https://$host$request_uri;
-    	}
+    #  if ($scheme = http) {
+    #		return 301 https://$host$request_uri;
+    #	}
 
       # Load Lua variables
       set_by_lua $webmail 'return os.getenv("WEBMAIL")';
